# c_tutorial

./: LICENSE  README.md
Tutorial1_RPM_packaging/: build.sh
Tutorial1_RPM_packaging/hello-rpm/: src.c
Tutorial1_RPM_packaging/hello-rpm/packaging/: hello-rpm.spec
Tutorial2_CMake_build/: build.sh
Tutorial2_CMake_build/hello-cmake-0.1/: CMakeLists.txt
Tutorial2_CMake_build/hello-cmake-0.1/include/: test.h.in
Tutorial2_CMake_build/hello-cmake-0.1/src/: main.c
Tutorial2_CMake_build/hello-cmake-0.1/tools/: hello-configure-blue.sh.in  hello-configure-green.sh.in  hello-configure-red.sh.in
